--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  display: grid;
+  grid-template-columns: 2fr;
+  grid-template-rows: 60px auto;
+  grid-template-areas:
+    'nav'
+    'mainContent';
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  font-family: monospace;
+  background-color: whitesmoke;
+}
+
+.routeDiv {
+  grid-area: mainContent;
+}
+
+.homePageTitle {
+  font-size: 100px;
+}
+
+.navBar {
+  grid-area: nav;
+  background-color: white;
+  border: 1px solid #dedede;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+  color: #888;
+  width: 100%;
+  top: 0;
+  position: fixed;
+}
+
+.pageLink {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 17px;
+  color: black;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.pageLink:hover {
+  background-color: rgb(150, 30, 30);
   color: white;
+  border-radius: 3px;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  margin: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menuItems {
+  color: black;
 }
