--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
     'mainContent';
   min-height: 100vh;
   text-align: center;
-  font-family: monospace;
-  background-color: whitesmoke;
+  font-family: 'Barlow', sans-serif;
+  background-color: white;
 }
 
 .routeDiv {
@@ -41,6 +41,7 @@
   color: black;
   margin-top: 0;
   margin-bottom: 12px;
+  font-weight: bold;
 }
 
 .pageLink:hover {
