alter CSS to the portfolio page and add media queries

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -3,19 +3,12 @@
   grid-template-columns: 1fr 1fr;
   list-style: none;
   column-count: 2;
-  column-gap: 5em;
+  column-gap: 10em;
   padding: 5em;
-  margin-top: 1em;
-  margin-bottom: 1em;
 }
 
 h2 {
   font-weight: bold;
-}
-
-img {
-  box-shadow: 9px 10px 10px 1px grey;
-  border-radius: 10px;
 }
 
 .portfolioTitle {
@@ -24,45 +17,69 @@ img {
 }
 
 .butterflyImg {
-  width: 60%;
-  height: auto;
+  margin-left: 90px;
+  width: 550px;
+  height: 400px;
+  box-shadow: 1px 5px 5px 1px grey;
 }
 
 .ncNewsImg {
-  width: 70%;
-  height: 70%;
+  margin-left: 70px;
+  width: 600px;
+  height: 400px;
+  box-shadow: 1px 5px 5px 1px grey;
 }
 
 .butterflyInfo {
-  width: 50%;
-  margin-left: 195px;
-  margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 600px;
+  margin-top: 30px;
+  margin-left: 65px;
+  text-align: 'center';
   font-size: 18px;
 }
 
 .ncNewsInfo {
-  width: 50%;
-  margin-left: 210px;
+  width: 600px;
+  margin-left: 70px;
   margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
   font-size: 18px;
 }
 
 .butterflyList {
   background-color: #f5f8fa;
   border-radius: 5px;
-  box-shadow: 3px 5px 5px 1px grey;
-}
-
-.butterflyList:hover {
-  background-color: rgb(245, 241, 241);
+  box-shadow: 1px 5px 5px 1px grey;
+  display: grid;
+  grid-template-columns: 1fr;
+  list-style: none;
+  column-gap: 1em;
+  padding: 2em;
 }
 
 .ncNewsList {
   background-color: #f5f8fa;
   border-radius: 5px;
-  box-shadow: 3px 5px 5px 1px grey;
+  box-shadow: 1px 5px 5px 1px grey;
+  display: grid;
+  grid-template-columns: 1fr;
+  list-style: none;
+  padding: 2em;
+}
+
+@media only screen and (max-width: 1679px) {
+  .butterflyImg {
+    margin-left: 30px;
+  }
+
+  .butterflyInfo {
+    width: 480px;
+  }
+
+  .ncNewsImg {
+    margin-left: 10px;
+  }
+
+  .ncNewsInfo {
+    width: 500px;
+  }
 }
